--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tajam</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <container class="wrapper">
@@ -17,9 +18,10 @@
 
 
 
-        <section class="ourStory">
+        <section class="Story">
             <!-- Miroslav, your code goes here -->
         </section>
+
 
 
 
@@ -29,9 +31,11 @@
 
 
 
+
         <section class="expertise">
             <!-- Stephan, your code goes here -->         
         </section>
+
 
 
 
@@ -40,9 +44,15 @@
         </section>
 
 
+
+
+
         <section class="contact">
              <!-- Miroslav, your code goes here -->            
         </section>
+
+
+
 
 
         <footer class="footer">
