--- a/index.html
+++ b/index.html
@@ -1,55 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <title>Tajam | Craetive Agancy</title>
+  </head>
+  <body>
     <container class="wrapper">
-        <!-- this is a general container that helps style the general look(width) of the website -->
+      <!-- this is a general container that helps style the general look(width) of the website -->
 
+      <header class="header">
+        <!-- Hani , your code goes here -->
+      </header>
 
-        <header class="header">
-            <!-- Hani , your code goes here -->
-        </header>
+      <section class="ourStory">
+        <!-- Miroslav, your code goes here -->
+      </section>
 
+      <section class="video">
+        <!-- Miroslav, your code goes here -->
+      </section>
 
+      <section class="expertise">
+        <!-- Stephan, your code goes here -->
+      </section>
 
-        <section class="ourStory">
-            <!-- Miroslav, your code goes here -->
-        </section>
+      <section class="team">
+        <!-- Ali, your code goes here -->
+      </section>
 
+      <section class="contact">
+        <!-- Miroslav, your code goes here -->
+      </section>
 
-
-        <section class="video">
-            <!-- Miroslav, your code goes here -->
-        </section>
-
-
-
-        <section class="expertise">
-            <!-- Stephan, your code goes here -->         
-        </section>
-
-
-
-        <section class="team">
-            <!-- Ali, your code goes here --> 
-        </section>
-
-
-        <section class="contact">
-             <!-- Miroslav, your code goes here -->            
-        </section>
-
-
-        <footer class="footer">
-            <!-- Ali, your code goes here -->            
-        </footer>
-
-
+      <footer class="footer">
+        <!-- Ali, your code goes here -->
+      </footer>
     </container>
-</body>
+  </body>
 </html>
