CSS reset, added default classes, changed stucture

--- a/index.html
+++ b/index.html
@@ -9,36 +9,39 @@
     <title>Tajam | Craetive Agancy</title>
   </head>
   <body>
-    <container class="wrapper">
-      <!-- this is a general container that helps style the general look(width) of the website -->
+    <container class="wrapper">      
+      <div class="container">
+        <!-- this is a general container that helps style the general look(width) of the website -->
 
-      <header class="header">
-        <!-- Hani , your code goes here -->
-      </header>
+        <header class="header">
+          <!-- Hani , your code goes here -->
+        </header>
 
-      <section class="ourStory">
-        <!-- Miroslav, your code goes here -->
-      </section>
+        <section class="ourStory">
+          <!-- Miroslav, your code goes here -->
+        </section>
 
-      <section class="video">
-        <!-- Miroslav, your code goes here -->
-      </section>
+        <section class="video">
+          <!-- Miroslav, your code goes here -->
+        </section>
 
-      <section class="expertise">
-        <!-- Stephan, your code goes here -->
-      </section>
+        <section class="expertise">
+          <!-- Stephan, your code goes here -->
+        </section>
 
-      <section class="team">
-        <!-- Ali, your code goes here -->
-      </section>
+        <section class="team">
+          <!-- Ali, your code goes here -->
+        </section>
 
-      <section class="contact">
-        <!-- Miroslav, your code goes here -->
-      </section>
+        <section class="contact">
+          <!-- Miroslav, your code goes here -->
+        </section>
 
-      <footer class="footer">
-        <!-- Ali, your code goes here -->
-      </footer>
+        <footer class="footer">
+          <!-- Ali, your code goes here -->
+        </footer>
+      </div>
+    </container>
     </container>
   </body>
 </html>
