--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
-    <title>Tajam | Craetive Agancy</title>
+    <title>Tajam | Creative Agancy</title>
   </head>
   <body>
     <container class="wrapper">
