--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </section>
 
         <section class="Story">
-            <!-- Miroslav, your code goes here -->
+          <!-- Miroslav, your code goes here -->
         </section>
 
         <section class="video">
@@ -31,6 +31,56 @@
 
         <section class="expertise">
           <!-- Stephan, your code goes here -->
+          <hgroup class="expertise__hgroup">
+            <h2 class="expertise__hgroup-h">Expertise</h2>
+            <p class="expertise__hgroup-text">
+              Lorem ipsum dolor sit ametproin gravida nibh vel velit
+            </p>
+          </hgroup>
+          <div class="expertise__container">
+            <div class="expertise__card">
+              <svg class="expertise__card-icon">
+                <use xlink:href="./images/screen.svg#screen.svg"></use>
+              </svg>
+              <h3 class="expertise__card-heading"></h3>
+              <p class="expertise__card-text"></p>
+            </div>
+            <div class="expertise__card">
+              <svg class="expertise__card-icon">
+                <use xlink:href="./images/screen.svg#screen.svg"></use>
+              </svg>
+              <h3 class="expertise__card-heading"></h3>
+              <p class="expertise__card-text"></p>
+            </div>
+            <div class="expertise__card">
+              <svg class="expertise__card-icon">
+                <use xlink:href="./images/screen.svg#screen.svg"></use>
+              </svg>
+              <h3 class="expertise__card-heading"></h3>
+              <p class="expertise__card-text"></p>
+            </div>
+            <div class="expertise__card">
+              <svg class="expertise__card-icon">
+                <use xlink:href="./images/screen.svg#screen.svg"></use>
+              </svg>
+              <h3 class="expertise__card-heading"></h3>
+              <p class="expertise__card-text"></p>
+            </div>
+            <div class="expertise__card">
+              <svg class="expertise__card-icon">
+                <use xlink:href="./images/screen.svg#screen.svg"></use>
+              </svg>
+              <h3 class="expertise__card-heading"></h3>
+              <p class="expertise__card-text"></p>
+            </div>
+            <div class="expertise__card">
+              <svg class="expertise__card-icon">
+                <use xlink:href="./images/screen.svg#screen.svg"></use>
+              </svg>
+              <h3 class="expertise__card-heading"></h3>
+              <p class="expertise__card-text"></p>
+            </div>
+          </div>
         </section>
 
         <section class="team">
