created the header and styled it

--- a/index.html
+++ b/index.html
@@ -15,6 +15,30 @@
 
         <header class="header">
           <!-- Hani , your code goes here -->
+          <nav>
+            <div>
+              <svg class="logo_main">
+                <use xlink:href="./images/logo.svg#Vector_Smart_Object"></use>
+              </svg>
+              <h3 class="text_tajam">tajam</h3>
+            </div>
+            <ul>
+              <a href="">home</a>
+              <a href="">about</a>
+              <a href="">expertise</a>
+              <a href="">teams</a>
+              <a href="">works</a>
+              <a href="">people say</a>
+              <a href="">contact</a>
+            </ul>
+          </nav>
+          <div class="header_welcoming_msg">
+            <h1>We Are Awesome Creative Agency</h1>
+            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
+            <button>LEARN MORE</button>
+          </div>
+
+
         </header>
 
         <section class="ourStory">
