Styled section expertise

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <hgroup class="expertise__hgroup">
             <h2 class="expertise__hgroup-h">Expertise</h2>
             <p class="expertise__hgroup-text">
-              Lorem ipsum dolor sit ametproin gravida nibh vel velit
+              Lorem ipsum dolor sit amet proin gravida nibh vel velit
             </p>
           </hgroup>
           <div class="expertise__container">
@@ -42,43 +42,64 @@
               <svg class="expertise__card-icon">
                 <use xlink:href="./images/screen.svg#screen.svg"></use>
               </svg>
-              <h3 class="expertise__card-heading"></h3>
-              <p class="expertise__card-text"></p>
+              <h3 class="expertise__card-heading">Web Design & Development</h3>
+              <p class="expertise__card-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui,
+                pariatur voluptatem. Qui quia ut unde.
+              </p>
             </div>
             <div class="expertise__card">
               <svg class="expertise__card-icon">
-                <use xlink:href="./images/screen.svg#screen.svg"></use>
+                <use xlink:href="./images/pen.svg#pen.svg"></use>
               </svg>
-              <h3 class="expertise__card-heading"></h3>
-              <p class="expertise__card-text"></p>
+              <h3 class="expertise__card-heading">Branding Identity</h3>
+              <p class="expertise__card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deleniti totam voluptatem consectetur eius, repellendus
+                accusantium?
+              </p>
             </div>
             <div class="expertise__card">
               <svg class="expertise__card-icon">
-                <use xlink:href="./images/screen.svg#screen.svg"></use>
+                <use xlink:href="./images/mobile.svg#mobile.svg"></use>
               </svg>
-              <h3 class="expertise__card-heading"></h3>
-              <p class="expertise__card-text"></p>
+              <h3 class="expertise__card-heading">Mobile App</h3>
+              <p class="expertise__card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Suscipit quisquam minima vero animi, hic deleniti.
+              </p>
             </div>
             <div class="expertise__card">
               <svg class="expertise__card-icon">
-                <use xlink:href="./images/screen.svg#screen.svg"></use>
+                <use xlink:href="./images/graph.svg#graph.svg"></use>
               </svg>
-              <h3 class="expertise__card-heading"></h3>
-              <p class="expertise__card-text"></p>
+              <h3 class="expertise__card-heading">
+                Search Engine Optimization
+              </h3>
+              <p class="expertise__card-text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum
+                beatae asperiores itaque dicta excepturi alias!
+              </p>
             </div>
             <div class="expertise__card">
               <svg class="expertise__card-icon">
-                <use xlink:href="./images/screen.svg#screen.svg"></use>
+                <use xlink:href="./images/gameboy.svg#gameboy.svg"></use>
               </svg>
-              <h3 class="expertise__card-heading"></h3>
-              <p class="expertise__card-text"></p>
+              <h3 class="expertise__card-heading">Game Development</h3>
+              <p class="expertise__card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+                repudiandae nobis ipsam expedita debitis porro.
+              </p>
             </div>
             <div class="expertise__card">
               <svg class="expertise__card-icon">
-                <use xlink:href="./images/screen.svg#screen.svg"></use>
+                <use xlink:href="./images/heart.svg#heart.svg"></use>
               </svg>
-              <h3 class="expertise__card-heading"></h3>
-              <p class="expertise__card-text"></p>
+              <h3 class="expertise__card-heading">Made with Love</h3>
+              <p class="expertise__card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+                debitis, quaerat commodi officia magnam aperiam.
+              </p>
             </div>
           </div>
         </section>
