corection for css

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           </nav>
           <div class="header_welcoming_msg">
             <h1>We Are Awesome Creative Agency</h1>
+            <hr />
             <p>
               This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
               velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
@@ -75,7 +76,7 @@
             </p>
             <button>Learn more</button>
           </div>
-
+        </section>
         <section class="video">
           <a href="#">
             <div class="play"></div>
@@ -163,7 +164,9 @@
         </section>
 
         <section class="contact">
-          <!-- Miroslav, your code goes here -->
+          <form action="">
+            <input type="text" />
+          </form>
         </section>
 
         <footer class="footer">
