--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
               <a href="">people say</a>
               <a href="">contact</a>
             </ul>
+            <div class="hamburger">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+            </div>
+            <div class="mobile_menu">
+              <ul class="mobile_menu_link">
+                <li class="close"><a href="#">home</a></li>
+                <li class="close"><a href="#">about</a></li>
+                <li class="close"><a href="#">expertise</a></li>
+                <li class="close"><a href="#">works</a></li>
+                <li class="close"><a href="#">people say</a></li>
+                <li class="close"><a href="#">contact</a></li>
+              </ul>
+            </div>
           </nav>
           <div class="header_welcoming_msg">
             <h1>We Are Awesome Creative Agency</h1>
@@ -371,5 +386,6 @@
         </footer>
       </div>
     </container>
+    <script src="menu.js"></script>
   </body>
 </html>
