--- a/index.html
+++ b/index.html
@@ -1,50 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
-    <title>Tajam | Creative Agancy</title>
-  </head>
-  <body>
-    <container class="wrapper">
-      <div class="container">
-        <!-- this is a general container that helps style the general look(width) of the website -->
 
-        <header class="header">
-          <!-- Hani , your code goes here -->
-        </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+  <title>Tajam | Creative Agancy</title>
+</head>
 
-        <section class="ourStory">
-          <!-- Miroslav, your code goes here -->
-        </section>
+<body>
+  <container class="wrapper">
+    <div class="container">
+      <!-- this is a general container that helps style the general look(width) of the website -->
 
-        <section class="Story">
-            <!-- Miroslav, your code goes here -->
-        </section>
+      <header class="header">
+        <!-- Hani , your code goes here -->
+      </header>
 
-        <section class="video">
-          <!-- Miroslav, your code goes here -->
-        </section>
+      <section class="ourStory">
+        <!-- Miroslav, your code goes here -->
+      </section>
 
-        <section class="expertise">
-          <!-- Stephan, your code goes here -->
-        </section>
+      <section class="Story">
+        <!-- Miroslav, your code goes here -->
+      </section>
 
-        <section class="team">
-          <!-- Ali, your code goes here -->
-        </section>
+      <section class="video">
+        <!-- Miroslav, your code goes here -->
+      </section>
 
-        <section class="contact">
-          <!-- Miroslav, your code goes here -->
-        </section>
+      <section class="expertise">
+        <!-- Stephan, your code goes here -->
+      </section>
 
-        <footer class="footer">
-          <!-- Ali, your code goes here -->
-        </footer>
-      </div>
-    </container>
-  </body>
+      <section class="team">
+        <!-- Ali, your code goes here -->
+
+        <h3>MEET OUR AMAZING TEAM</h3>
+        <P class="Lorem">Lorem ipsum, dolor sit amet consectetur adipisicing elit</P>
+
+        <ul class="ul-team">
+
+          <li>
+            <div class="team-image"> </div>
+            <p>Hani CEO & FOUNDER</p>
+          </li>
+
+          <li>
+            <div class="team-image"></div>
+            <p>Ali ENGINEERING</p>
+          </li>
+
+
+          <li>
+            <div class="team-image"></div>
+            <p>Stephan DESIGNER</p>
+          </li>
+
+          <li>
+            <div class="team-image"></div>
+            <p>Miroslav MARKETING</p>
+          </li>
+
+        </ul>
+
+        <div class="p-button">
+          <P class="Become-part">Become part of our dream team, let's join us!</P>
+
+          <button class="HIRING">WE ARE HIRING</button>
+
+        </div>
+
+
+
+
+      </section>
+
+      <section class="contact">
+        <!-- Miroslav, your code goes here -->
+      </section>
+
+      <footer class="footer">
+        <!-- Ali, your code goes here -->
+
+
+        <div class="footer-body">
+
+          <div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint, rem! Aperiam culpa et vero ratione
+              cupiditate quo quasi. Provident fuga quasi quia qui numquam tempore atque aut maxime accusantium aliquid.
+            </p>
+          </div>
+
+          <div>
+            <h3>OUR STUDIO</h3>
+            <p>Ruko cucruk,JI Radio lura dalen No.12-13,Kalideres - jakarta Barat 11480 - Indonesia
+            </p>
+
+            <p>(+62) 21-221232312</p>
+          </div>
+
+          <div>
+            <h3>STAY IN TOUCH</h3>
+            <IMg></IMg>
+          </div>
+
+        </div>
+
+
+        <div class="nav-p">
+
+          <div class="nav">
+
+            <a href="">HELP</a>
+            <a href="">TERMS & CONDITION</a>
+            <a href="">PRIVACY</a>
+
+          </div>
+
+
+          <div>
+            <P>Copyright 2015-Tajem Creative</P>
+
+          </div>
+
+        </div>
+
+
+
+      </footer>
+    </div>
+  </container>
+</body>
+
 </html>
