Adding logo transition

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="header">
           <!-- Hani , your code goes here -->
           <nav>
-            <div>
+            <div class="header_logo">
               <svg class="logo_main">
                 <use xlink:href="./images/logo.svg#Vector_Smart_Object"></use>
               </svg>
@@ -37,6 +37,12 @@
               <span class="bar"></span>
             </div>
             <div class="mobile_menu">
+              <div class="header_logo_mobile">
+                <svg class="logo_main">
+                  <use xlink:href="./images/logo.svg#Vector_Smart_Object"></use>
+                </svg>
+                <h3 class="text_tajam">tajam</h3>
+              </div>
               <ul class="mobile_menu_link">
                 <li class="close"><a href="#">home</a></li>
                 <li class="close"><a href="#">about</a></li>
