added company info to mobile menu

--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
                 <li class="close"><a href="#">people say</a></li>
                 <li class="close"><a href="#">contact</a></li>
               </ul>
+              <div class="mobile_menu_info">
+                <div class="mobile_menu_info_title">
+                  <h3>Company info</h3>
+                  <hr />
+                </div>
+                <p>
+                  Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres -
+                  Jakarta Barat 11480 - Indonesia
+                </p>
+                <p>(+62) 21-2224 3333</p>
+              </div>
             </div>
           </nav>
           <div class="header_welcoming_msg">
