--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container">
         <!-- this is a general container that helps style the general look(width) of the website -->
 
-        <header class="header">
+        <header class="header" id="header">
           <!-- Hani , your code goes here -->
           <nav>
             <div class="header_logo">
@@ -23,13 +23,13 @@
               <h3 class="text_tajam">tajam</h3>
             </div>
             <ul>
-              <a href="">home</a>
-              <a href="">about</a>
-              <a href="">expertise</a>
-              <a href="">teams</a>
-              <a href="">works</a>
-              <a href="">people say</a>
-              <a href="">contact</a>
+              <a href="#header">home</a>
+              <a href="#story">about</a>
+              <a href="#expertise">expertise</a>
+              <a href="#team">teams</a>
+              <a href="#expertise">works</a>
+              <a href="#people">people say</a>
+              <a href="#contact">contact</a>
             </ul>
             <div class="hamburger">
               <span class="bar"></span>
@@ -46,8 +46,9 @@
               <ul class="mobile_menu_link">
                 <li class="close"><a href="#">home</a></li>
                 <li class="close"><a href="#">about</a></li>
-                <li class="close"><a href="#">expertise</a></li>
-                <li class="close"><a href="#">works</a></li>
+                <li class="close"><a href="#expertise">expertise</a></li>
+                <li class="close"><a href="#expertise">teams</a></li>
+                <li class="close"><a href="#expertise">works</a></li>
                 <li class="close"><a href="#">people say</a></li>
                 <li class="close"><a href="#">contact</a></li>
               </ul>
@@ -78,7 +79,7 @@
           </div>
         </header>
 
-        <section class="story">
+        <section class="story" id="story">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -116,7 +117,7 @@
           </a>
         </section>
 
-        <section class="expertise">
+        <section class="expertise" id="expertise">
           <!-- Stephan, your code goes here -->
           <hgroup class="expertise__hgroup">
             <h2 class="expertise__hgroup-h">Expertise</h2>
@@ -191,12 +192,12 @@
           </div>
         </section>
 
-        <section class="team">
+        <section class="team" id="team">
           <!-- Ali, your code goes here -->
         </section>
 
-        <section class="contact">
-          <div class="contact_form">
+        <section class="contact" id="people">
+          <div class="contact_form" id="contact">
             <h2>Give us a good news</h2>
             <form action="">
               <input
