--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
               <h3 class="text_tajam">tajam</h3>
             </div>
             <ul>
-              <a href="">home</a>
-              <a href="">about</a>
-              <a href="">expertise</a>
-              <a href="">teams</a>
-              <a href="">works</a>
+              <a href="#">home</a>
+              <a href="#story">about</a>
+              <a href="#expertise">expertise</a>
+              <a href="#team">teams</a>
+              <a href="#contact">works</a>
               <a href="">people say</a>
-              <a href="">contact</a>
+              <a href="#contact">contact</a>
             </ul>
             <div class="hamburger">
               <span class="bar"></span>
@@ -61,7 +61,7 @@
           </div>
         </header>
 
-        <section class="story">
+        <section class="story" id="story">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -99,7 +99,7 @@
           </a>
         </section>
 
-        <section class="expertise">
+        <section class="expertise" id="expertise">
           <!-- Stephan, your code goes here -->
           <hgroup class="expertise__hgroup">
             <h2 class="expertise__hgroup-h">Expertise</h2>
@@ -174,11 +174,11 @@
           </div>
         </section>
 
-        <section class="team">
+        <section class="team" id="team">
           <!-- Ali, your code goes here -->
         </section>
 
-        <section class="contact">
+        <section class="contact" id="contact">
           <div class="contact_form">
             <h2>Give us a good news</h2>
             <form action="">
