Enabled smooth scrolling

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 <h3 class="text_tajam">tajam</h3>
               </div>
               <ul class="mobile_menu_link">
-                <li class="close"><a href="#">home</a></li>
-                <li class="close"><a href="#">about</a></li>
+                <li class="close"><a href="#header">home</a></li>
+                <li class="close"><a href="#story">about</a></li>
                 <li class="close"><a href="#expertise">expertise</a></li>
-                <li class="close"><a href="#expertise">teams</a></li>
+                <li class="close"><a href="#team">teams</a></li>
                 <li class="close"><a href="#expertise">works</a></li>
-                <li class="close"><a href="#">people say</a></li>
-                <li class="close"><a href="#">contact</a></li>
+                <li class="close"><a href="#people">people say</a></li>
+                <li class="close"><a href="#contact">contact</a></li>
               </ul>
               <div class="mobile_menu_info">
                 <div class="mobile_menu_info_title">
